# RAG-Chatbot-Flask

./: README.md  chat.py  embedder_e5.py  pyproject.toml  structure.txt
app/: __init__.py  logging.py  settings.py
app/db/: __init__.py  connection.py
app/models/: __init__.py  embedding.py  llm.py  stopping.py
app/prompts/: RAG_template.py
app/rag/: context.py  pipeline.py  search.py
app/routes/: __init__.py  chat.py
models/: links
static/: style.css
templates/: index_streaming.html
